Added portfolio component

--- a/src/app/invest-calc/invest-calc.component.html
+++ b/src/app/invest-calc/invest-calc.component.html
@@ -7,5 +7,8 @@
     <mat-tab label="Investment Property">
       <app-investment-property></app-investment-property>
     </mat-tab>
+    <mat-tab label="Portfolio">
+      <app-portfolio></app-portfolio>
+    </mat-tab>
   </mat-tab-group>
 </div>
