--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -132,3 +132,17 @@
     </span>
   </p>
 </div>
+
+<div style="display: block; width: 700px">
+  <ngx-charts-pie-chart
+    [view]="[700, 400]"
+    [scheme]="colorScheme"
+    [results]="pieChartData"
+    [legend]="true"
+    [explodeSlices]="false"
+    [labels]="true"
+    [doughnut]="false"
+    [gradient]="false"
+  >
+  </ngx-charts-pie-chart>
+</div>
