--- a/src/app/components/invest-calc/invest-calc.component.html
+++ b/src/app/components/invest-calc/invest-calc.component.html
@@ -14,9 +14,9 @@
 
   <!-- Form Section -->
   <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="Portfolio">
+    <!-- <mat-tab label="Portfolio">
       <app-portfolio></app-portfolio>
-    </mat-tab>
+    </mat-tab> -->
     <mat-tab label="Investment Calculator">
       <app-regular-invest> </app-regular-invest>
     </mat-tab>
