--- a/src/app/components/invest-calc/invest-calc.component.scss
+++ b/src/app/components/invest-calc/invest-calc.component.scss
@@ -1,35 +1,95 @@
-.mat-tab-group {
-  margin-bottom: 48px;
+.sidenav-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
 }
 
-.form-group {
+mat-sidenav {
+  width: 250px;
+  background-color: #fafafa;
+  border-right: 1px solid #ddd;
+  height: calc(100vh - 64px);
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  margin-top: 64px;
+}
+
+.mat-nav-list {
+  flex-grow: 1;
+  padding-top: 0;
+}
+
+.mat-list-item {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 12px 16px;
+  display: flex;
+  align-items: center;
+}
+
+.mat-list-item:hover {
+  background-color: #e0e0e0;
+  cursor: pointer;
+}
+
+.mat-icon {
+  margin-right: 10px;
+}
+
+mat-toolbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  padding: 0 20px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  background-color: #3f51b5;
+  color: white;
+  height: 64px;
+}
 
-  .form-group mat-form-field {
-    width: 45%;
-    margin-right: 20px; /* Add margin to the right */
+.mat-icon-button {
+  margin-right: 10px;
+}
+
+button[mat-icon-button] {
+  color: white;
+}
+
+.spacer {
+  flex: 1;
+}
+
+button[mat-raised-button] {
+  margin-left: 10px;
+}
+
+mat-sidenav-content {
+  margin-top: 64px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  height: calc(100vh - 64px);
+  overflow: auto;
+}
+
+@media screen and (max-width: 768px) {
+  mat-sidenav {
+    width: 200px;
   }
-}
 
-.results {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 30px;
+  mat-toolbar {
+    padding: 0 10px;
+  }
 
-  .result-item {
-    text-align: left;
+  .mat-list-item {
+    font-size: 14px;
+  }
 
-    span {
-      display: block;
-      font-size: 18px;
-
-      &.value {
-        font-size: 24px;
-        font-weight: bold;
-        color: #d32f2f;
-      }
-    }
+  mat-sidenav-content {
+    padding: 10px;
   }
 }
