--- a/src/app/components/invest-calc/invest-calc.component.html
+++ b/src/app/components/invest-calc/invest-calc.component.html
@@ -1,10 +1,10 @@
 <mat-sidenav-container class="sidenav-container" autosize>
   <mat-sidenav #sidenav mode="side" opened>
     <mat-nav-list>
-      <mat-list-item [routerLink]="['portfolio']">
+      <!-- <mat-list-item [routerLink]="['portfolio']">
         <mat-icon>account_balance</mat-icon>
         <span>Portfolio</span>
-      </mat-list-item>
+      </mat-list-item> -->
       <mat-list-item [routerLink]="['regular-invest']">
         <mat-icon>calculate</mat-icon>
         <span>Regular Investment</span>
